src/css/report.styl
$report-header-height = 60px

.estimated-chart-container
	position relative
	height 100% !important

#estimated-chart
	height 100% !important

#report__container
		padding: 0 0.5em;
		display: flex;
		height: 100%;
		justify-content: space-between;

.map__container
		padding: 0 1em;
		width 350px
		box-sizing: border-box;

.reportMap
		background-color #404040
		height 600px
		left 0
		display inline-block
		padding 1px

.map .container
		background #404040 !important

//.report-component.charts__container
//	border-right: 2px solid #888;

body
		font-family Raleway
		background #404040
		color #ccc

.country-name
		font-size 2em
		margin-left 1.1em

#report-map-header
		height 81px
		z-index 50
		background #404040

#report-map-body
		height: calc(100% - 120px);
		display: flex
		align-items center

.report-map-body__contant
		position: relative

//#reportMap_root
#reportMap
		width 325px !important
		height 75%

.report-component
		display inline-block
		height 100%
		width calc((100vw - 350px) / 2)
		vertical-align top
		padding: 0 1em;
		box-sizing: border-box;

.map-component
		box-sizing initial
		position absolute
		z-index 30

.button-widget
		background-color white
		border 1px solid black
		border-radius(5px)
		height 30px
		width 30px
		display block

.share-container
		background-color white
		border-radius(5px)
		overflow-y auto
		min-width 50px
		height 60px
		width auto
		left 31px
		top -65px

.share-button
		top -50px

		.share-connector
				top 161px

#share-widgets
		padding 14px 15px 0

#embedShare
		display inline-block
		cursor pointer
		height 33px
		width 33px
		background url(images/embed_icon.png) no-repeat #fff
		margin-left -4px

#csvShare
		display inline-block
		cursor pointer
		height 33px
		width 33px
		background url(images/export-archive.png) no-repeat gray 62% 35%

//TODO: replace icon
.addthis_sharing_toolbox
		display inline-block
		vertical-align bottom

.at_flat_counter
		display none !important

.share-icon
		background url('images/map_tools_share.png') no-repeat
		background-position 8px 8px

.share-icon
		height 100%
		width 100%

.share-icon:hover
		background-color #eee

.tundra .dijitDialogTitleBar
		background #055d7d !important
		padding 6px !important

.tundra .dijitDialogCloseIcon
		background url('images/close_x_symbol.png') no-repeat !important
		top 8px !important

.tundra .dijitDialogTitle
		color white

.tundra .dijitDialogPaneContent
		color black

.total-lands, .comm-indig-lands, .indicator-table-container, .indicator-footer-container
		width 100%

.total-lands, .comm-indig-lands
		height 40%

.indicator-table-container
//height 75%
		padding-bottom 1em
		text-align center
		tr
				height 2em

.indicator-footer-container
		text-align center
		margin 0.5em 0

.indicator-footer-container__body
		display: flex;
		justify-content: space-around;

.footer-header
		margin 0
		font-size 1em
		margin-bottom 1em

.footer-child
		display inline-block
		width 22.5%
		vertical-align text-top

.footer-child__label
		padding-top .5em
		display block
		font-size: .7em

.low, .medium, .high, .highest
		height 26px
		width 26px
		border-radius 50%
		line-height 26px
		margin 0 auto
		color #404040
		padding 2px

.low
		background-color #4fa951

.medium
		background-color #FFFE98

.high
		background-color #E9874D

.highest
		background-color #DD4A50

.unavailable
		color grey
		font-size 12px
		font-style italic

.middle-column
		padding-left 10px
		padding-right 10px

.chart-center
		text-align center
		line-height .3

.chart-percent
		color white
		font-weight bold
		font-size 24px

// line-height 0

.chart-circle
		border-radius 20px
		background red
		line-height 0

.inline-chart
		display inline-block

.flag-icon
		position absolute !important
		height 2.4em !important
		width 2em !important


.report-header
		font-size 1em
		padding 0.5em 1em
		margin 0
		text-transform uppercase
		text-align center
		// min-height: $report-header-height;
		display: flex;
		align-items: center;
		justify-content: center;
		font-weight 100

.report-value-table
		margin 0 auto

.header-row td
.indicator-table-container
		border-bottom 2px solid #175e79

.indicators-table__body
		height: calc(100% - 60px);
		display: flex;
		align-items: center;
		justify-content: center;

.lands-mapped-chart-container
		display: flex;
		justify-content: space-between;
		height 40%

		.inline-chart
				width 50%
				height 100%
				display: flex;
				justify-content: center;
				align-items: center;

.comments
		font-size: .8em
		padding-top 5px

		strong
				padding-left 1em

@media screen and (min-height: 800px) {
		.report-component,
		.map__container {
				height 800px
		}
}

@media screen and (min-width: 801px) and (max-width: 1040px) {
		#report__container {
				flex-wrap: wrap;
		}

		.charts__container {
				width: calc(100vw - 400px);
		}

		.indicators-table__container {
				width 100%
				height: auto;
		}
}

@media screen and (max-width: 800px) {
		#report__container {
				flex-direction: column
		}

		.map__container,
		.report-component {
				width 100%
				height: auto;
		}
		.report-component {
				margin-top 2em
				padding-top 2em
				border-top: 2px solid #2fa3d9
		}

		#reportMap {
				display: block;
		}

		#reportMap,
		.report-map-body__contant {
				margin: auto;
		}
}

@media print {
	body {
		width: 1200px;
	}
	#share-button {
		display: none;
	}
}

